Suteikta galimybe prideti savo receptus(Ikelti i DB)

--- a/app/src/main/res/layout/activity_hungry.xml
+++ b/app/src/main/res/layout/activity_hungry.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="31dp"
         android:gravity="center"
-        android:text="Uh oh, dėja liksi alkanas..."
+        android:text="Uh oh, deja liksi alkanas..."
         android:textColor="#00853E"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
