--- a/app/src/main/res/layout/about_item.xml
+++ b/app/src/main/res/layout/about_item.xml
@@ -28,5 +28,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/ingridientImageView"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/aboutCheck"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/ic_check"
+            tools:layout_editor_absoluteX="353dp"
+            tools:layout_editor_absoluteY="18dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
