--- a/app/src/main/res/layout/about_item.xml
+++ b/app/src/main/res/layout/about_item.xml
@@ -33,9 +33,11 @@
             android:id="@+id/aboutCheck"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="16dp"
             android:visibility="invisible"
-            app:srcCompat="@drawable/ic_check"
-            tools:layout_editor_absoluteX="353dp"
-            tools:layout_editor_absoluteY="18dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_check" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
