--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -130,7 +130,7 @@
         app:layout_constraintTop_toBottomOf="@+id/produktasRecyclerView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/delButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
